# dotfiles

./: .gitignore  CLAUDE.md  TODO.md  dolphinrc  install.sh
btop/: btop.conf
dunst/: dunstrc
easyhub/: CMakeLists.txt  README.md
easyhub/src/: main.cpp  tray.cpp  tray.hpp
fish/: config.fish
hypr/: adebug.lua  hyprland.lua  hyprlock.conf  hyprpaper.conf  user_config.lua  user_config.lua.sample
ly/: config.ini
nvim/: init.lua
nvim/colors/: vscode.lua
waybar/: config.jsonc  style.css  theme.css
waybar/modules/: backlight.jsonc  battery.jsonc  clock.jsonc  pulseaudio.jsonc
waybar/modules/custom/: separators.jsonc  workspaces.jsonc
waybar/modules/hyprland/: language.jsonc
waybar/scripts/: backlight  workspace
waybar/styles/: fonts.css  modules-center.css  modules-left.css  modules-right.css  states.css
wofi/: config  style.css  toggle.sh
zellij/: config.kdl
